refactor(pcm-tests): cleanup stream expressions